--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -1,7 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,300&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
+}
+
+html{
+    font-family: 'Lato', 'Arial', sans-serif;
 }
