--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -6,8 +6,75 @@
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 html{
     font-family: 'Lato', 'Arial', sans-serif;
 }
+
+/* Main Section Starts Here */
+
+#main{
+    height: 100vh;
+    width: 100%;
+    text-align: center;
+}
+
+#main::after{
+    content: "";
+    background: url(../images/hero.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    opacity: 0.8;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;
+
+}
+
+#main .content{
+    height: 100vh;
+    width: 50%;
+    margin: auto;
+    padding-top: 20%;
+}
+
+#main .content p{
+    font-size: 40px;
+    margin-bottom: 20px;
+    color: #000;
+}
+
+#main .content a{
+    padding: 10px 15px;
+    border-radius: 4px;
+    font-weight: bold;
+    transition: all .5s ease;
+}
+
+#main .content .first-btn{
+    background-color: #000;
+    color: #fff;
+}
+
+#main .content .first-btn:hover{
+    background-color: #fff;
+    color: #000;
+}
+
+#main .content .second-btn{
+    background-color: #fff;
+    color: #000;
+}
+
+#main .content .second-btn:hover{
+    background-color: #000;
+    color: #fff;
+}
+
+/* Main Section Ends Here */
