--- a/resource/css/style.css
+++ b/resource/css/style.css
@@ -13,6 +13,46 @@ html{
     font-family: 'Lato', 'Arial', sans-serif;
 }
 
+section{
+    padding: 80px 0;
+}
+
+h1, h2, h3{
+    text-transform: uppercase;
+    font-weight: 300;
+}
+
+h1{
+    margin-top: 0;
+    margin-bottom: 15px;
+    color: #000;
+    word-spacing: 3px;
+    letter-spacing: 1px;
+    font-size: 240%;
+}
+
+h2{
+    font-size: 180%;
+    text-align: center;
+    margin-bottom: 30px;
+    letter-spacing: 1px;
+    font-weight: bold;
+}
+
+h2:after{
+    content: "";
+    display: block;
+    height: 2px;
+    background-color: #000;
+    width: 15%;
+    margin: 0 auto;
+    margin-top: 10px;
+}
+
+h3{
+    font-size: 110%;
+}
+
 ::selection{
     background-color: cadetblue;
 }
@@ -20,7 +60,7 @@ html{
 /* Navbar Starts Here */
 
 #navbar{
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: rgba(255, 255, 255, 0.5);
     box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.4);
     height: 20vh;
     width: 100%;
@@ -45,6 +85,7 @@ html{
 }
 
 #navbar .list{
+    margin-top: 15px;
     width: 100%;
 }
 
@@ -67,11 +108,13 @@ html{
 }
 
 #navbar .list ul li a:hover{
-    border-top: 3px solid #000;
-    border-bottom: 3px solid #000;
+    border-top: 2px solid #000;
+    border-bottom: 2px solid #000;
 }
 
 /* Navbar Ends Here */
+
+
 
 /* Main Section Starts Here */
 
@@ -143,6 +186,18 @@ html{
 
 /* Features Section Starts Here */
 
+#features{
+    margin: 0 70px;
+}
 
+#features .feature-text{
+    width: 80%;
+    margin: 10px auto;
+    line-height: 145%;
+}
+
+#features .box{
+    
+}
 
 /* Features Section Ends Here */
